package com.cursosdedesarrollo.springbootjpaapirestcleanarchitecture.application.dtos;

public class AplicarDescuentoInput {
    public String idProducto;
    public double porcentaje;
}
